# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.12 2005/04/29 21:25:50 wolf31o2 Exp $

  29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean2-chroot.sh:
  Commenting ugly gcc-config hack, as it should no longer be needed.

  29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added livecd/users to example livecd-stage2 spec file.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> -NOTES, README,
  -REMARKS, -TODO:
  Removing old files from previous maintainers and updating README.

  20 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Fixing small bug in sed for livecd/users.

  19 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/runscript-support/livecdfs-update.sh, modules/grp_target.py,
  modules/livecd_stage2_target.py:
  Added livecd/users option to create non-root users. The first user listed
  will also be used for auto-starting X, if X is merged onto the CD. Fixed bug
  #89365 with a back-ported patch from catalyst2.

  15 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/fsscript.sh.example, examples/gamecd.conf.example,
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/snapshot_template.spec, -livecd/files/README.txt,
  -livecd/files/environmental.motd.txt, +livecd/files/livecd.motd.txt,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript/default-runscript.sh:
  Updated all instances of livecd/type: gentoo-release-environmental to
  gentoo-release-livecd, added generic-livecd, and updated all example spec
  files to be more verbose and to include all current options, including