@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.68.2.2 2005/04/19 21:18:35 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.68.2.3 2005/05/03 15:40:51 rocket Exp $
 
 # Maintained in full by John Davis <zhen@gentoo.org>
 
@@ -168,6 +168,14 @@ def build_target(addlargs, targetmap):
 			raise CatalystError,"Target \""+addlargs["target"]+"\" not available."
 		
 		mytarget=targetmap[addlargs["target"]](conf_values, addlargs)
+		
+		# Kill any pids in the chroot
+		print "Checking for processes running in chroot and killing them."
+		mytarget.kill_chroot_pids()
+		
+		# Check for mounts right away and abort if we cannot unmount them.
+		mytarget.mount_safety_check()
+		
 		mytarget.run()
 
 	except CatalystError:
