@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.12 2005/04/29 21:25:50 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.198.2.13 2005/05/03 15:40:51 rocket Exp $
+
+  03 May 2005; Eric Edgar <rocket@gentoo.org> catalyst,
+  modules/generic_stage_target.py, +targets/support/kill-chroot-pids.sh:
+  Patch to kill pids in the chroot to allow unbind to function properly
 
   29 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/stage1/stage1-chroot.sh,
